--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="en">
     <head charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
     <title>Frambozen</title>
     </head>
 
@@ -26,7 +29,7 @@
 
     <p>De lekkere rozerode vruchtjes zitten vol vitamine C. Dat heb je nodig voor een goede weerstand en voldoende energie. Daarnaast zorgt het voor een goed functionerend zenuwstelsel en gezonde botten, tanden, huid, haar en bloedvaten.</p>
     <h3> Foliumzuur</h3>
-    <p>Daarnaast zijn frambozen een bron van foliumzuur. Dit wordt ook wel vitamine B11 genoemd en is een onmisbaar voor het lichaam. Het helpt bij de aanmaak van rode bloedcellen in het beenmerg. </p>
+    <p class="last-paragraph">Daarnaast zijn frambozen een bron van foliumzuur. Dit wordt ook wel vitamine B11 genoemd en is een onmisbaar voor het lichaam. Het helpt bij de aanmaak van rode bloedcellen in het beenmerg. </p>
 
 
     <button type="submit">
